适配自己开发环境的一些更改

--- a/ch4/CMakeLists.txt
+++ b/ch4/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 2.8)
 project(useSophus)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ")
+# find_package(Sophus REQUIRED)
+# adapt my thinkpad-t480 env
 
-# 为使用 sophus，需要使用find_package命令找到它
-find_package(Sophus REQUIRED)
-include_directories(${Sophus_INCLUDE_DIRS})
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) # 把执行文件都写到工程目录下的bin文件夹底下
+include_directories("/usr/local/include/")
 
 # Eigen
 include_directories("/usr/include/eigen3")
